
	* lily/script-column.cc (before_line_breaking): use extract_grob_set()

	* lily/include/paper-column.hh (class Paper_column): add
	non-static get_rank() member.

	* scm/framework-null.scm: new file, used for benchmarking.

2005-07-20  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/INSTALL.texi, configure.in: fix
	version dependencies for fontforge and gs.

	* Documentation/index.html.in, Documentation/texinfo.css: 
	optimize for a 800x600 screen, increases printability
	when 'fit to page' is not set and readability in wide screens.

	* stepmake/bin/add-html-footer.py: add missing </p>.

2005-07-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (beam): use polygon in beam
	command.

	* lily/grob-pq-engraver.cc (stop_translation_timestep): save up
	all acknowledged grobs, and do potentially expensive merge and
	write in one go.

	* buildscripts/mf-to-table.py (write_fontlist): enforce noBreak.

	* configure.in (reloc_b): add --enable-static-gxx to statically
	link to libstdc++

	* lily/GNUmakefile (static-gxx-libs): new target
	static-gxx-libs. Create symlink to libstdc++.a

	* lily/new-lyric-combine-music-iterator.cc: rename to
	Lyric_combine_music_iterator

	* lily/lyric-combine-music-iterator.cc
	(Old_lyric_combine_music_iterator): rename to
	Old_lyric_combine_music_iterator

	* lily/*-engraver.cc (various): remove double use of
	PRECOMPUTED_VIRTUAL function: only use
	start_translation_timestep() and stop_translation_timestep(), not
	both.

	* lily/break-substitution.cc (fast_substitute_grob_array): do
	fast_substitute_grob_array for all unordered grob_arrays.
	(substitute_grob): return Grob *. Saves packing/unpacking SCMs.
	(substitute_grob_array): optimize.

	* lily/align-interface.cc (set_axis): set ordered_ for 'elements

	* lily/include/grob-array.hh (class Grob_array): ordered_ member.

	* lily/parser.yy: revert $globalheader patch.
	
	* lily/include/translator.icc