@@ -1,4 +1,7 @@
-<html><title>References on Music Notation</title>
+<html><head>
+  <style type="text/css"> body { width: 760px; } </style>
+  <title>References on Music Notation</title>
+  </head>
   <body>
     <h1> References on Music Notation</h1>
     <ul>
